arg: Throw an explicit error if we don't know how to make an array

Previously, we were just passing a 0 length array if you gave say {}
as the argument for a uint8 array...kind of lame.

https://bugzilla.gnome.org/show_bug.cgi?id=689343